fix scrollbar-gutter

--- a/src/scss/component/sidebar/page/vault.scss
+++ b/src/scss/component/sidebar/page/vault.scss
@@ -8,7 +8,7 @@
 	}
 
 	> .body { padding: 0px 0px 48px 0px; overflow: visible; }
-	.ReactVirtualized__List { padding: 0px 2px 0px 8px; }
+	.ReactVirtualized__List { padding: 0px 2px 0px 8px; scrollbar-gutter: stable; }
 
 	.filterWrapper { padding: 0px 16px; margin: 0px 0px 8px 0px; }
 	.filter { padding: 0px; }
